coming soon updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- TODO INJECT THE EMAIL AND LINK ALL ACCOUNTS TO THE WEBSITE AND THE EMAIL -->
-	-->
+	
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Coming Soon Page</title>
@@ -92,7 +92,7 @@
         }
 
         :-moz-placeholder {
-            font-family: Helvetica, Arial, sans-serif;
+            font-family: Helvetica, Arial, sans-serif;conerstonechristaincenter.github.io
             font-weight: 400;
             font-style: ;
         }
@@ -170,8 +170,8 @@
         #mc-embedded-subscribe.active,
         #mc-embedded-subscribe.disabled,
         #mc-embedded-subscribe[disabled] {
-            background-color: #d9d9d9;
-            *background-color: #cccccc;
+            background-color: #d9d9d9;conerstonechristaincenter.github.io
+            *background-color: #ccccccconerstonechristaincenter.github.io
         }
 
         .cspio .btn-primary:active,
