--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="cspio">
 
 <head>
-    <!-- TODO INJECT THE EMAIL AND LINK ALL ACCOUNTS TO THE WEBSITE AND THE EMAIL -->
+    <!-- TODO INJECT THE EMAIL AND LINK ALL ACCOUNTS TO THE WEBSITE AND THE EMAIL-->
 	
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -92,7 +92,7 @@
         }
 
         :-moz-placeholder {
-            font-family: Helvetica, Arial, sans-serif;conerstonechristaincenter.github.io
+            font-family: Helvetica, Arial, sans-serif;
             font-weight: 400;
             font-style: ;
         }
@@ -169,9 +169,9 @@
         #mc-embedded-subscribe:active,
         #mc-embedded-subscribe.active,
         #mc-embedded-subscribe.disabled,
-        #mc-embedded-subscribe[disabled] {
-            background-color: #d9d9d9;conerstonechristaincenter.github.io
-            *background-color: #ccccccconerstonechristaincenter.github.io
+        #mc-embedded-subscribe[disabled] {-->
+            background-color: #d9d9d9;
+            *background-color: #cccccc;
         }
 
         .cspio .btn-primary:active,
@@ -285,7 +285,7 @@
     <div id="cspio-page">
         <div id="cspio-content">
 
-            <img id="logo" src="logo.png" height="290" width="290">
+            <img id="logo" src="logo.png" height="250" width="250">
 
             <h1 id="cspio-headline">Coming Soon</h1>
             <h3 class='id="cspio-headline' id="demo"></h3>
@@ -308,7 +308,7 @@
             <span id="cspio-privacy-policy-txt">We promise to never spam you.</span>
 
             <div id="cspio-socialprofiles">
-                <a href="" target="_blank"><i class="fa fa-facebook-official fa-2x" style="color:#5E3B93"></i></a>
+                <a href="https://www.facebook.com/Cornerstone-Christian-Centre-1128159653937671/" target="_blank"><i class="fa fa-facebook-official fa-2x" style="color:#5E3B93"></i></a>
                 <a href="mailto:" target="_blank"><i class="fa fa-envelope fa-2x" style="color:#5E3B93"></i></a>
             </div>
 
