--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
   <script src="js/jquery.timepicker.min.js"></script>
   <script src="js/jquery.mb.YTPlayer.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4qh2Ol5lDs9vEST_4R4iP07JIqxJRYv8"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
 
