--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
-
+  <link rel="canonical" href="http://cornerstonechristiancentresa.org" />
   <link rel="stylesheet" href="css/aos.css">
-
+  http://CORNERSTONECHRISTIANCENTRESA.ORG
   <link rel="stylesheet" href="css/ionicons.min.css">
 
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
