latest updates to the app

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 		<section class="ftco-bible-study">
 			<div class="container-wrap">
 				<div class="col-md-12 wrap">
-					<div class="container">
+				<div class="container" style="padding-top:5px; padding-bottom:5px">
 						<div class="row">
 							<div class="col-md-12 d-md-flex">
 								<div class="one-forth ftco-animate">
@@ -92,11 +92,11 @@
     <section class="ftco-section-2" >
      <div class="container-fluid">
        <div class="section-2-blocks-wrapper d-flex row no-gutters">
-         <div class="img col-md-5 ftco-animate" style="background-image: url('images/pastors1.jpg');">
-           <!-- <a href="https://vimeo.com/45830194" class="button popup-vimeo"><span class="ion-ios-play"></span></a> -->
+         <div class="img col-md-6 ftco-animate" style="background-image: url('images/pastors1.jpg');">
+
          </div>
-         <div class="text col-md-6 ftco-animate">
-           <div class="text-inner">
+         <div class="col-md-6 ftco-animate" >
+           <div class="text text-inner text-center">
 
              <!-- Need to make this header bigger and bolder like OUr Leaders header -->
              <h2 style="color :black">Founding Pastors</h2>
@@ -107,12 +107,67 @@
                 Pastor Samuel was brought up in Meadowlands Soweto; he is married to Pastor Maleepile Dove and God has blessed them with a son Bohlale Dove.
                 <br>
            <p> Pastor Samuel Dove believes that Jesus is the answer to all problems that people are facing and thus his passion in preaching and teaching the word of God, planting churches and equipping  the Saints for the work of the ministry.
-             Connect with Pastor Samuel Dove on <a href="https://web.facebook.com/samuel.dove.31">Facebook</a>.</p>
+             Connect with Pastor Samuel Dove on <a href="https://web.facebook.com/samuel.dove.31">Facebook</a>.<p>
+
            </div>
          </div>
        </div>
      </div>
     </section>
+
+    <section class="ftco-section-3 bg-light">
+     <div class="container">
+       <div class="row no-gutters">
+         <div class="col-md-6 py-8 nav-link-wrap aside-stretch">
+           <div class="nav ftco-animate flex-column nav-pills text-md-right" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+             <a class="nav-link active pr-5" id="v-pills-vision-tab" data-toggle="pill" href="#v-pills-vision" role="tab" aria-controls="v-pills-vision" aria-selected="false">Vision</a>
+             <a class="nav-link pr-5" id="v-pills-mission-tab" data-toggle="pill" href="#v-pills-mission" role="tab" aria-controls="v-pills-mission" aria-selected="true">Mission</a>
+
+             <a class="nav-link pr-5" id="v-pills-vision-tab" data-toggle="pill" href="#v-pills-values" role="tab" aria-controls="v-pills-vision" aria-selected="false">Values</a>
+
+           </div>
+         </div>
+         <div class="col-md-6 pt-5 pb-5 pl-md-5 d-flex align-items-center">
+
+           <div class="tab-content ftco-animate pl-md-5" id="v-pills-tabContent">
+
+             <div class="tab-pane fade" id="v-pills-mission" role="tabpanel" aria-labelledby="v-pills-mission-tab">
+               <span class="icon mb-3 d-block flaticon-bed"></span>
+               <h2 style="color:#6f42c1">Our Mission</h2>
+               <p class="lead">Evangelism</p>
+               <p class="lead">Discipleship</p>
+               <p class="lead">Affirmation</p>
+               <p class="lead">Commission</p>
+               <!-- improve list view -->
+             </div>
+
+             <div class="tab-pane fade show active" id="v-pills-vision" role="tabpanel" aria-labelledby="v-pills-vision-tab">
+               <span class="icon mb-3 d-block flaticon-tray"></span>
+               <h2 style="color:#6f42c1">Our Vision</h2>
+               <p class="lead">"To win Souls and to raise them as true disciples of Jesus Christ."</p>
+               <p> Matthew 28:19 "Therefore go and make disciples of all nations, baptizing them in the name of the Father and of the Son and of the Holy Spirit"</p>
+               <p> </p>
+               <p> </p>
+               <p> </p>
+               <p> </p>
+             </div>
+             <div class="tab-pane fade" id="v-pills-values" role="tabpanel" aria-labelledby="v-pills-vision-tab">
+               <span class="icon mb-3 d-block flaticon-tray"></span>
+               <h2 style="color:#6f42c1">Our Values</h2>
+               <p class="lead">Truth</p>
+               <p class="lead">Love</p>
+               <p class="lead">Participation</p>
+               <p class="lead">Stewardship</p>
+               <p class="lead">Transparency</p>
+               <p class="lead">Unity</p>
+
+               <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </section>
 
   <!--  <section class="ftco-section testimony-section bg-light">
       <div class="container">
@@ -268,10 +323,9 @@
 
                   <h3>Ministries of Help</h3>
 
-                  <span>Home Cell</span>
                   <span>Ushers</span>
                   <span>Hospitality</span>
-                  <span>Councelling</span>
+                  <span>Counselling</span>
                 </div>
               </div>
             </div>
@@ -280,7 +334,7 @@
                 <div class="text">
                   <i class="fas fa-drum fa-7x" style="color:#7D3C98"></i>
                   <h3>Worship</h3>
-                  <span>Worshipping Team</span>
+                  <span>Worshiping Team</span>
                   <span>Technical Team</span>
 
                 </div>
