--- a/events.html
+++ b/events.html
@@ -64,7 +64,7 @@
     <section class="ftco-bible-study">
 			<div class="container-wrap">
 				<div class="col-md-12 wrap">
-					<div class="container">
+					<div class="container" style="padding-top:0px; padding-bottom:0px">
 						<div class="row">
 							<div class="col-md-12 d-md-flex">
 								<div class="one-forth ftco-animate">
@@ -123,7 +123,7 @@
     						<h3 class="mb-2"><a href="events.html">New Venue Launch</a></h3>
     						<p class="mb-4"><span>10:00 at Cnr 12 Messelaar and Van Wyk street</span></p>
     						<a href="events.html" class="img mb-4" style="background-image: url(images/newvenue3.jpg);"></a>
-    						<p>Cornerstone is moving to a new bigger and better builing!</p>
+    						<p>Cornerstone is moving to a new bigger and better building!</p>
     					</div>
     				</div>
 					</div>
