--- a/sermons.html
+++ b/sermons.html
@@ -64,7 +64,7 @@
 		<section class="ftco-bible-study">
 			<div class="container-wrap">
 				<div class="col-md-12 wrap">
-					<div class="container">
+					<div class="container" style="padding-top:0px; padding-bottom:0px">
 						<div class="row">
 							<div class="col-md-12 d-md-flex">
 								<div class="one-forth ftco-animate">
