latest version of the site

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/image1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+    <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/background.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
 			<div class="overlay js-fullheight"></div>
 			<div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
@@ -65,7 +65,7 @@
 		<section class="ftco-bible-study">
 			<div class="container-wrap">
 				<div class="col-md-12 wrap">
-				<div class="container" style="padding-top:5px; padding-bottom:5px">
+				<div class="container" style="padding-top:0px; padding-bottom:0px">
 						<div class="row">
 							<div class="col-md-12 d-md-flex">
 								<div class="one-forth ftco-animate">
