--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
             <p><span>Phone:</span> <a href="tel://1234567920">+27733669610</a></p>
           </div>
           <div class="col-md-3">
-            <p><span>Email:</span> <a href="mailto:email@example.com">info.CornerstoneChristianCentreRSA@gmail.com</a></p>
+            <p><span>Email:</span> <a href="mailto:email@example.com">info.CornerstoneCentre1@gmail.com</a></p>
           </div>
           <!-- <div class="col-md-3">
             <p><span>Website</span> <a href="#">cornerstonechristiancentresa.org</a></p>
