--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </nav>
   <!-- END nav -->
 
-  <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/image1.jpg);   background-size:cover; background-position: center center;background-attachment:fixed;"
+  <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/background.jpg);   background-size:cover; background-position: center center;background-attachment:fixed;"
     data-section="home">
     <div class="overlay js-fullheight"></div>
     <a class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=-cbC5dpil68',containment:'#home', showControls:false, autoPlay:true, loop:true, mute:true, startAt:0, opacity:1, quality:'default'}"></a>
@@ -366,7 +366,7 @@
               <div class="text">
                 <h3 class="mb-2"><a href="events.html">Saturday Teachings</a></h3>
                 <p class="mb-4"><span>15:00 pm Once every month. Last Saturday of each month.</span></p>
-                <a href="events.html" class="img" style="background-image: url(images/teachings2.JPG);"></a>
+                <a href="events.html" class="img" style="background-image: url(images/pastor.JPG);"></a>
               </div>
             </div>
             <div class="event-entry d-flex ftco-animate">
@@ -684,7 +684,7 @@
               <li><a href="https://goo.gl/maps/ujqHEiwDqdS2" class="py-2 d-block">Roodepoort, No. 23 Columbia House, Cnr
                   Van Wyk and Hogson Street</a></li>
               <li><a href="#" class="py-2 d-block">+27733669610</a></li>
-              <li><a href="#" class="py-2 d-block">info.cornerstonecentresa@gmail.com</a></li>
+              <li><a href="#" class="py-2 d-block">info.cornerstonecentre1@gmail.com</a></li>
 
             </ul>
           </div>
