--- a/sermons.html
+++ b/sermons.html
@@ -49,7 +49,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/image1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+    <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/background.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
 			<div class="overlay js-fullheight"></div>
 			<div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
@@ -96,7 +96,7 @@
         <div class="row">
         	<div class="col-md-4 ftco-animate">
         		<div class="sermons">
-        			<a href="https://vimeo.com/45830194" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/image1.jpg);">
+        			<a href="https://vimeo.com/45830194" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/background.jpg);">
         				<div class="icon d-flex justify-content-center align-items-center">
         					<span class="icon-play"></span>
         				</div>
