--- a/events.html
+++ b/events.html
@@ -49,7 +49,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/image1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+    <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/background.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
 			<div class="overlay js-fullheight"></div>
 			<div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
@@ -64,7 +64,7 @@
     <section class="ftco-bible-study">
 			<div class="container-wrap">
 				<div class="col-md-12 wrap">
-					<div class="container" style="padding-top:0px; padding-bottom:0px">
+					<div class="container" style="padding-top:5px; padding-bottom:5px">
 						<div class="row">
 							<div class="col-md-12 d-md-flex">
 								<div class="one-forth ftco-animate">
@@ -106,7 +106,7 @@
     					<div class="text">
     						<h3 class="mb-2"><a href="events.html">Saturday Teachings</a></h3>
     						<p class="mb-4"><span>15:00 pm Once every month. Last Saturday of each month.</span></p>
-    						<a href="events.html" class="img mb-4" style="background-image: url(images/Teachings.JPG);"></a>
+    						<a href="events.html" class="img mb-4" style="background-image: url(images/pastor.JPG);"></a>
     						<p> On the last Saturday of every month, join us for a fresh and practical view of bible teachings.</p>
     					</div>
     				</div>
