--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Wisdom - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Cornerstone</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -50,7 +50,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/image1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+    <section id="home" class="video-hero js-fullheight" style="height: 700px; background-image: url(images/background.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
 		<div class="overlay js-fullheight"></div>
 			<div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
