added email infomation

--- a/gallery.html
+++ b/gallery.html
@@ -574,7 +574,7 @@
                     <ul class="list-unstyled">
                       <li><a href="https://goo.gl/maps/ujqHEiwDqdS2" class="py-2 d-block">Roodeport, No. 23 Columbia House, Cnr Van Wyk and Hogson Street</a></li>
                       <li><a href="#" class="py-2 d-block">+27733669610</a></li>
-                      <li><a href="#" class="py-2 d-block">info.cornerstonecentre1@gmail.com</a></li>
+                      <li><a href="#" class="py-2 d-block">contact@cornerstonechristiancentresa.org</a></li>
 
                     </ul>
                   </div>
@@ -585,7 +585,7 @@
                         <ul>
                           <li><span class="icon icon-map-marker"></span><span class="text">23 Van Wyk St, Roodepoort, Johannesburg, 1724</span></li>
                           <li><a href="#"><span class="icon icon-phone"></span><span class="text">+27733669610</span></a></li>
-                          <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info.cornerstonecentre1@gmail.com</span></a></li>
+                          <li><a href="#"><span class="icon icon-envelope"></span><span class="text">contact@cornerstonechristiancentresa.org</span></a></li>
                           <li><span class="icon icon-clock-o"></span><span class="text"> Sunday 10:00am - 13:30:00pm</span></li>
                         </ul>
                       </div>
