added email infomation

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
           </div>
         </div>
-        <div class="img col-md-6 ftco-animate" style="background-image: url('images/Pastors_Home.jpg');">
+        <div class="img col-md-6 ftco-animate" style="background-image: url('images/Pastors_Home.JPG');">
           <!-- <a href="https://vimeo.com/45830194" class="button popup-vimeo"><span class="ion-ios-play"></span></a> -->
         </div>
       </div>
