--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
     <section class="ftco-section-2" >
      <div class="container-fluid">
        <div class="section-2-blocks-wrapper d-flex row no-gutters">
-         <div class="img col-md-6 ftco-animate" style="background-image: url('images/pastors1.jpg');">
+         <div class="img col-md-6 ftco-animate" style="background-image: url('images/pastors1.JPG');">
 
          </div>
          <div class="col-md-6 ftco-animate" >
