--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                 Pastor Samuel is also known for strongly believing in a practical gospel, that the word must be demonstrated practically.
                 Pastor Samuel was brought up in Meadowlands Soweto; he is married to Pastor Maleepile Dove and God has blessed them with a son Bohlale Dove.
                 <br>
-           <p> Pastor Samuel Dove believes that Jesus is the answer to all problems that people are facing and thus his passion in preaching and teaching the word of God, planting churches and equipping  the Saints for the work of the ministry.
+           <p>Pastor Samuel Dove believes that Jesus is the answer to all problems that people are facing and thus his passion in preaching and teaching the word of God, planting churches and equipping  the Saints for the work of the ministry.
              Connect with Pastor Samuel Dove on <a href="https://web.facebook.com/samuel.dove.31">Facebook</a>.<p>
 
            </div>
@@ -379,7 +379,7 @@
             </div>
     			<div class="col-md-4 ftco-animate">
             <div class="block-10 d-md-flex align-items-center">
-            	<div class="img" style="background-image: url(images/pastor_maleepile.jpg)"></div>
+            	<div class="img" style="background-image: url(images/pastor_maleepile.JPG)"></div>
               <div class="person-info pl-md-3">
                 <span class="name">Pastor Maleepile Dove</span>
                 <span class="position">Executive Member</span>
