--- a/events.html
+++ b/events.html
@@ -106,7 +106,7 @@
     					<div class="text">
     						<h3 class="mb-2"><a href="events.html">Saturday Teachings</a></h3>
     						<p class="mb-4"><span>15:00 pm Once every month. Last Saturday of each month.</span></p>
-    						<a href="events.html" class="img mb-4" style="background-image: url(images/pastor.JPG);"></a>
+    						<a href="events.html" class="img mb-4" style="background-image: url(images/pastor.jpg);"></a>
     						<p> On the last Saturday of every month, join us for a fresh and practical view of bible teachings.</p>
     					</div>
     				</div>
