--- a/sermons.html
+++ b/sermons.html
@@ -118,7 +118,7 @@
         			<div class="text">
         				<h3><a href="#">God is a Good God</a></h3>
         				<span class="position">Pastor. Samuel Dove</span>
-        				<p>Pastor Samuel uncomplicates the so called 'complicated' gospel. The general message is about how God did not send His Son to condemn you, but to save you</p>
+        				<p>Pastor Samuel uncomplicates the so called 'complicated' gospel of Salvation. The general message is about how God did not send His Son to condemn you, but to save you</p>
         			</div>
         		</div>
         	</div>
