--- a/events.html
+++ b/events.html
@@ -74,10 +74,7 @@
 								<div class="one-half d-md-flex align-items-md-center ftco-animate">
 									<div class="countdown-wrap">
 										<p class="countdown d-flex">
-											<span id="days"></span>
-											<span id="hours"></span>
-											<span id="minutes"></span>
-											<span id="seconds"></span>
+											 <h2>Today!</h2>
 										</p>
 									</div>
 									<div class="button">
