--- a/index.html
+++ b/index.html
@@ -85,10 +85,7 @@
               <div class="one-half d-md-flex align-items-md-center ftco-animate">
                 <div class="countdown-wrap">
                   <p class="countdown d-flex">
-                    <span id="days"></span>
-                    <span id="hours"></span>
-                    <span id="minutes"></span>
-                    <span id="seconds"></span>
+                    <h3 style="text-align:center">Today!</h3>
                   </p>
                 </div>
               </div>
