removed the new venue launch

--- a/sermons.html
+++ b/sermons.html
@@ -60,7 +60,7 @@
         </div>
       </div>
 		</section>
-
+<!--
 		<section class="ftco-bible-study">
 			<div class="container-wrap">
 				<div class="col-md-12 wrap">
@@ -77,9 +77,7 @@
 											<h3 style="text-align:center">Today!</h3>
 										</p>
 									</div>
-									<!-- <div class="button">
-										<p><a href="#" class="btn btn-primary p-3">Details</a></p>
-									</div> -->
+
 								</div>
 							</div>
 						</div>
@@ -87,20 +85,35 @@
 				</div>
 			</div>
 		</section>
+  -->
 
 		<section class="ftco-section">
       <div class="container">
         <div class="row">
+          <div class="col-md-4 ftco-animate">
+            <div class="sermons">
+              <a href="https://www.youtube.com/watch?v=mJ46hRddxQ4&t=22s" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/table.JPG);">
+                <div class="icon d-flex justify-content-center align-items-center">
+                  <span class="icon-play"></span>
+                </div>
+              </a>
+              <div class="text">
+                <h3><a href="#">Ministry of Giving</a></h3>
+                <span class="position">Pastor Samuel Dove</span>
+                <p> Pastor Samuel brings fresh revelations on the Ministry of Giving. If you have faith for a deeper financial breakthrough in your life, watch this sermon/p>
+              </div>
+            </div>
+          </div>
         	<div class="col-md-4 ftco-animate">
         		<div class="sermons">
-        			<a href="https://vimeo.com/45830194" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/background.jpg);">
+        			<a href="https://www.youtube.com/watch?v=qr5JU6qdJv8" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/table.JPG);">
         				<div class="icon d-flex justify-content-center align-items-center">
         					<span class="icon-play"></span>
         				</div>
         			</a>
         			<div class="text">
         				<h3><a href="#">Wait on the Lord</a></h3>
-        				<span class="position">Pastor. Samuel Dove</span>
+        				<span class="position">Pastor Samuel Dove</span>
         				<p> Pastor Samuel reminds the saints about the importance of waiting on the Lord. If you have been praying for a breakthrough in some area of your life, watch this video, it will renew your strength through the Holy Spirit.</p>
         			</div>
         		</div>
@@ -135,9 +148,25 @@
         			</div>
         		</div>
         	</div>
+          <div class="col-md-4 ftco-animate">
+        		<div class="sermons">
+        			<a href="https://www.youtube.com/watch?v=dpbLTdKvs8Q" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/table.JPG);">
+        				<div class="icon d-flex justify-content-center align-items-center">
+        					<span class="icon-play"></span>
+        				</div>
+        			</a>
+        			<div class="text">
+        				<h3><a href="#">God Has Prepared Everything for You</a></h3>
+        				<span class="position">Pastor Samuel Dove</span>
+        				<p>A powerful message about the God who invites everyone to partake in His Kingdom. Full version.
+
+									</p>
+        			</div>
+        		</div>
+        	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="sermons">
-        			<a href="https://www.youtube.com/watch?v=VgWqRW0goIk" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/newimage.JPG);">
+        			<a href="https://www.youtube.com/watch?v=-cbC5dpil68" class="img popup-vimeo mb-3 d-flex justify-content-center align-items-center" style="background-image: url(images/newimage.JPG);">
         				<div class="icon d-flex justify-content-center align-items-center">
         					<span class="icon-play"></span>
         				</div>
