--- a/events.html
+++ b/events.html
@@ -60,7 +60,7 @@
         </div>
       </div>
 		</section>
-
+<!--
     <section class="ftco-bible-study">
 			<div class="container-wrap">
 				<div class="col-md-12 wrap">
@@ -87,7 +87,7 @@
 				</div>
 			</div>
 		</section>
-
+-->
 		<section class="ftco-section ftco-section-2">
 			<div class="container">
 				<div class="row">
@@ -96,50 +96,19 @@
 						<div class="event-entry d-flex ftco-animate">
     					<div class="meta mr-4">
     						<p>
-    							<span>24</span>
-    							<span>November 2018</span>
+    							<span>Sat</span>
+    							<span> Last Saturday of each Month</span>
     						</p>
     					</div>
     					<div class="text">
     						<h3 class="mb-2"><a href="events.html">Saturday Teachings</a></h3>
-    						<p class="mb-4"><span>15:00 pm Once every month. Last Saturday of each month.</span></p>
+    						<p class="mb-4"><span>15:00 pm Last Saturday of each month.</span></p>
     						<a href="events.html" class="img mb-4" style="background-image: url(images/pastor.jpg);"></a>
     						<p> On the last Saturday of every month, join us for a fresh and practical view of bible teachings.</p>
     					</div>
     				</div>
 					</div>
-					<div class="col-md-6">
-						<div class="event-entry d-flex ftco-animate">
-    					<div class="meta mr-4">
-    						<p>
-    							<span>02</span>
-    							<span>December 2018</span>
-    						</p>
-    					</div>
-    					<div class="text">
-    						<h3 class="mb-2"><a href="events.html">New Venue Launch</a></h3>
-    						<p class="mb-4"><span>10:00 at Cnr 12 Messelaar and Van Wyk street</span></p>
-    						<a href="events.html" class="img mb-4" style="background-image: url(images/newvenue3.jpg);"></a>
-    						<p>Cornerstone is moving to a new bigger and better building!</p>
-    					</div>
-    				</div>
-					</div>
-					<div class="col-md-6">
-						<div class="event-entry d-flex ftco-animate">
-    					<div class="meta mr-4">
-    						<p>
-    							<span>03 </span>
-    							<span> December 2018</span>
-    						</p>
-    					</div>
-    					<div class="text">
-    						<h3 class="mb-2"><a href="events.html">New Venue House Warming Prayer</a></h3>
-    						<p class="mb-4"><span>18:00 at Cnr 12 Messelaar and Van Wyk street</span></p>
-    						<a href="events.html" class="img mb-4" style="background-image:  url(images/final.jpg); opacity: 0.7;"></a>
-    						<p>Prayer week from 6:00pm to 7:pm Monday to Friday</p>
-    					</div>
-    				</div>
-					</div>
+
 					<div class="col-md-6">
 						<div class="event-entry d-flex ftco-animate">
     					<div class="meta mr-4">
