--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
     </div>
   </section>
-
+<!--
   <section class="ftco-bible-study">
     <div class="container-wrap">
       <div class="col-md-12 wrap">
@@ -95,7 +95,7 @@
       </div>
     </div>
   </section>
-
+-->
   <section class="ftco-section-2" >
     <div class="container-fluid">
       <div class="section-2-blocks-wrapper d-flex row no-gutters">
@@ -138,6 +138,21 @@
 
 
       <div class="row">
+        <div class="col-md-6 ftco-animate">
+          <div class="sermons">
+            <a href="https://www.youtube.com/watch?v=mJ46hRddxQ4&t=22s"class="img  mb-3 d-flex justify-content-center align-items-center"
+              style="background-image: url(images/image1.jpg);">
+              <div class="icon d-flex justify-content-center align-items-center">
+                <span class="icon-play"></span>
+              </div>
+            </a>
+            <div class="text">
+              <h3><a href="#">Ministry of Giving</a></h3>
+              <span class="position">Pastor Samuel Dove</span>
+              <p> Pastor Samuel brings fresh revelations on the Ministry of Giving. If you have faith for a deeper financial breakthrough in your life, watch this sermon </p>
+            </div>
+          </div>
+        </div>
         <div class="col-md-6 ftco-animate">
           <div class="sermons">
             <a href="https://www.youtube.com/watch?v=qr5JU6qdJv8&t=1629s" class="img  mb-3 d-flex justify-content-center align-items-center"
@@ -188,22 +203,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 ftco-animate">
-          <div class="sermons">
-            <a href="https://www.youtube.com/watch?v=-cbC5dpil68" class="img mb-3 d-flex justify-content-center align-items-center"
-              style="background-image: url(images/newimage.JPG);">
-              <div class="icon d-flex justify-content-center align-items-center">
-                <span class="icon-play"></span>
-              </div>
-            </a>
-            <div class="text">
-              <h3><a href="#">Revealing Christ in Us: Intro</a></h3>
-              <span class="position">Cornerstone Christian Centre</span>
-              <p>Revealing Christ in us</p>
-            </div>
-          </div>
-        </div>
-      </div>
+
       <div class="row mt-5">
         <div class="col text-center">
           <p><a href="sermons.html" class="btn btn-primary btn-outline-primary p-3">Watch all sermons</a></p>
