changed the gallery and the events part of the index page

--- a/gallery.html
+++ b/gallery.html
@@ -90,19 +90,99 @@
 		<section class="ftco-section">
       <div class="container">
         <div class="row">
+          <div class="col-md-4 ftco-animate">
+              <div class="blog-entry" data-aos-delay="100">
+                <a href="images/Gallery/background.JPG" class="block-20" style="background-image: url('images/Gallery/background.JPG');">
+                </a>
+                <div class="text p-4">
+                  <div class="meta mb-3">
+                    <div><a href="#">02 December, 2018 </a></div>
+                    <div><a href="#">Roodeport</a></div>
+                  </div>
+                  <h3 class="heading"><a >New Venue Launch day</a></h3>
+                </div>
+              </div>
+            </div>
             <div class="col-md-4 ftco-animate">
                 <div class="blog-entry" data-aos-delay="100">
-                  <a href="images/Gallery/IMG_6305.JPG" class="block-20" style="background-image: url('images/Gallery/IMG_6305.JPG');">
+                  <a href="images/Gallery/IMG_6500.JPG" class="block-20" style="background-image: url('images/Gallery/IMG_6500.JPG');">
                   </a>
                   <div class="text p-4">
                     <div class="meta mb-3">
-                      <div><a href="#">February, 2018 </a></div>
+                      <div><a href="#">02 December, 2018 </a></div>
                       <div><a href="#">Roodeport</a></div>
                     </div>
-                    <h3 class="heading"><a >Leadership Year Plan meeting</a></h3>
+                    <h3 class="heading"><a >New Venue Launch day</a></h3>
                   </div>
                 </div>
               </div>
+            <div class="col-md-4 ftco-animate">
+                <div class="blog-entry" data-aos-delay="100">
+                  <a href="images/Gallery/IMG_6493.JPG" class="block-20" style="background-image: url('images/Gallery/IMG_6493.JPG');">
+                  </a>
+                  <div class="text p-4">
+                    <div class="meta mb-3">
+                      <div><a href="#">01 December, 2018 </a></div>
+                      <div><a href="#">Roodeport</a></div>
+                    </div>
+                    <h3 class="heading"><a >Day before New Venue Launch</a></h3>
+                  </div>
+                </div>
+              </div>
+            <div class="col-md-4 ftco-animate">
+                <div class="blog-entry" data-aos-delay="100">
+                  <a href="images/Gallery/IMG_6643.JPG" class="block-20" style="background-image: url('images/Gallery/IMG_6643.JPG');">
+                  </a>
+                  <div class="text p-4">
+                    <div class="meta mb-3">
+                      <div><a href="#"> 09 December, 2018 </a></div>
+                      <div><a href="#">Roodeport</a></div>
+                    </div>
+                    <h3 class="heading"><a >Sister Sandy Wedding Reception</a></h3>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 ftco-animate">
+                  <div class="blog-entry" data-aos-delay="100">
+                    <a href="images/Gallery/IMG_6639.JPG" class="block-20" style="background-image: url('images/Gallery/IMG_6639.JPG');">
+                    </a>
+                    <div class="text p-4">
+                      <div class="meta mb-3">
+                        <div><a href="#"> 09 December, 2018 </a></div>
+                        <div><a href="#">Roodeport</a></div>
+                      </div>
+                      <h3 class="heading"><a >Sister Sandy Wedding Reception</a></h3>
+                    </div>
+                  </div>
+                </div>
+              <div class="col-md-4 ftco-animate">
+                  <div class="blog-entry" data-aos-delay="100">
+                    <a href="images/Gallery/IMG_6555.JPG" class="block-20" style="background-image: url('images/Gallery/IMG_6555.JPG');">
+                    </a>
+                    <div class="text p-4">
+                      <div class="meta mb-3">
+                        <div><a href="#">2 December, 2018 </a></div>
+                        <div><a href="#">Roodeport</a></div>
+                      </div>
+                      <h3 class="heading"><a >New Venue Launch day</a></h3>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4 ftco-animate">
+                    <div class="blog-entry" data-aos-delay="100">
+                      <a href="images/Gallery/IMG_6305.JPG" class="block-20" style="background-image: url('images/Gallery/IMG_6305.JPG');">
+                      </a>
+                      <div class="text p-4">
+                        <div class="meta mb-3">
+                          <div><a href="#">February, 2018 </a></div>
+                          <div><a href="#">Roodeport</a></div>
+                        </div>
+                        <h3 class="heading"><a >Leadership Year Plan meeting</a></h3>
+                      </div>
+                    </div>
+                  </div>
+
+
           <div class="col-md-4 ftco-animate">
             <div class="blog-entry" data-aos-delay="100">
               <a href="images/Gallery/sundayservice.JPG" class="block-20" style="background-image: url('images/Gallery/sundayservice.JPG');">
