--- a/index.html
+++ b/index.html
@@ -125,8 +125,6 @@
     -->
     </div>
   </div>
-
-
   <!--end home slider-->
 </section>
 <!--
@@ -263,9 +261,9 @@
           </div>
         </div>
 
-      <div class="row mt-5">
-        <div class="col text-center">
-          <p><a href="sermons.html" class="btn btn-primary btn-outline-primary p-3">Watch all sermons</a></p>
+      <div class="row mt-5 justify-content-center align-items-center">
+        <div class="col text-center ">
+          <p><a href="sermons.html" class="btn btn-primary  align-items-center btn-outline-primary p-3">Watch all sermons</a></p>
         </div>
       </div>
     </div>
@@ -415,28 +413,29 @@
               <div class="meta mr-4">
 
                 <p>
-                  <span>24</span>
-                  <span>Novemember 2018</span>
+                  <span>Sat</span>
+                  <span>Last Saturday of each month.</span>
                 </p>
               </div>
               <div class="text">
                 <h3 class="mb-2"><a href="events.html">Saturday Teachings</a></h3>
-                <p class="mb-4"><span>15:00 pm Once every month. Last Saturday of each month.</span></p>
-                <a href="events.html" class="img" style="background-image: url(images/pastor.JPG);"></a>
+                <p class="mb-4"><span>15:00 pm Last Saturday of each month..</span></p>
+                <a href="events.html" class="img" style="background-image: url(images/IMG_6532.JPG);"></a>
               </div>
             </div>
             <div class="event-entry d-flex ftco-animate">
               <div class="meta mr-4">
                 <p>
-                  <span>02</span>
+                  <span>25</span>
                   <span>December 2018</span>
                 </p>
               </div>
               <div class="text">
-                <h3 class="mb-2"><a href="events.html">New Venue Launch</a></h3>
-                <p class="mb-4"><span>10:00 at Cnr 12 Messelaar and Van Wyk street</span></p>
-                <a href="events.html" class="img" style="background-image: url(images/newvenue3.jpg);"></a>
-              </div>
+    						<h3 class="mb-2"><a href="events.html">Christmas Service</a></h3>
+    						<p class="mb-4"><span>10:00 am at Cnr 12 Messelaar and Van Wyk street </span></p>
+    						<a href="events.html" class="img mb-4" style="background-image: url(images/christmas.jpg);"></a>
+    						Celebrate the birth of Our Lord on with us! Unto us a child is born! (Isaiah 9:6)
+    					</div>
             </div>
           </div>
         </div>
