--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </section>
 -->
 
-<section id="home" class="js-fullheight" style="height: 700px;  background-size:cover; background-position: center center;background-attachment:fixed;"
+<section id="home" class="video-hero js-fullheight" style="height: 700px;  background-size:cover; background-position: center center;background-attachment:fixed;"
   data-section="home">
   <div class="home">
 
