--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <!-- Home Slider Item -->
         <div class="owl-item" style="opacity: 2">
-          <div class="home_slider_background" style="background-image:url(images/IndexImages/Pastor2.jpg)"></div>
+          <div class="home_slider_background" style="background-image:url(images/IndexImages/pastor2.png)"></div>
           <div class="home_slider_content text-center">
               <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"  style="opacity: 2 ;transform: translate(0px,000px);">Revealing<strong> Christ</strong>
                 in You </h1>
